--- a/index.html
+++ b/index.html
@@ -186,40 +186,45 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
   </div>
 
 
-            </section>
-     <section class="resume-section" id="concepts">
+        <section class="resume-section" id="concepts">
   <div class="resume-section-content">
     <h2 class="mb-5">Concepts & Core Skills</h2>
     <div class="row">
 
-      <!-- Technical Concepts -->
+      <!-- Data & Analytics -->
       <div class="col-md-4 mb-4">
-        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
+        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Data & Analytics</h4>
         <ul class="fa-ul" style="line-height: 1.9;">
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Cleaning & Transformation</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Analytics with Python</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Machine Learning Fundamentals</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Medical Imaging Analysis</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Visualization Principles</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>SQL Query Design & Optimization</li>
         </ul>
       </div>
 
-      <!-- Non-Technical Concepts -->
+      <!-- IT & Systems -->
       <div class="col-md-4 mb-4">
-        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
+        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">IT & Systems</h4>
         <ul class="fa-ul" style="line-height: 1.9;">
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
         </ul>
       </div>
 
-      <!-- Soft Skills -->
+      <!-- Professional Skills -->
       <div class="col-md-4 mb-4">
-        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
+        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Professional Skills</h4>
         <ul class="fa-ul" style="line-height: 1.9;">
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Time & Task Management</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Cross-Team Collaboration</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
         </ul>
       </div>
@@ -227,6 +232,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
     </div>
   </div>
 </section>
+
 
             <hr class="m-0" />
             <!-- Interests-->
