--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from studying IT and data anlytics, I enjoy being active and exercising. I play in multiple soccer leagues, reguraly go to the gym, and enjoy running. In the winter, I avidly ski and snowboard.</p>
-                    <p class="mb-0">When forced indoors, I enjoy playing the gutair and learning new songs. I take interest in learning new things and usally find things to fix or build, especially around my house. and I spend a large amount of my free time exploring the latest technology advancements in the IT and data analytics. If I am just relaxing I enjoy watching different si-fi movies and television shows.</p>
+                    <p>Apart from studying IT and data analytics, I enjoy staying active and exercising. I play in multiple soccer leagues, regularly go to the gym, and enjoy running. In the winter, I avidly ski and snowboard.</p>
+                    <p class="mb-0">When I’m indoors, I enjoy playing guitar and learning new songs. I’m always interested in learning new things and often find projects to fix or build—especially around the house. I also spend a lot of my free time exploring the latest advancements in IT and data analytics. When it’s time to relax, I enjoy watching sci-fi movies and television shows.</p>
                 </div>
             </section>
             <hr class="m-0" />
