--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#concepts">Concepts</a></li>                    
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#involvement">Involvement</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -337,6 +339,43 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                     </ul>
                 </div>
             </section>
+
+            <!-- Involvment and Leadership-->
+           <section class="resume-section" id="involvement">
+  <div class="resume-section-content">
+    <h2 class="mb-5">Involvement & Leadership</h2>
+
+    <!-- Item 1 -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+      <div class="flex-grow-1">
+        <h4 class="mb-0">RMU Club Soccer</h4>
+        <div class="subheading mb-2">Vice President and Leadership</div>
+        <p>Led team strategy and motivation in a competitive and supportive environment, organized training sessions and schedules for smooth operations, and managed player recruitment to grow club engagement.</p>
+      </div>
+      <div class="flex-shrink-0"><span class="text-primary">2020 - 2025</span></div>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+      <div class="flex-grow-1">
+        <h4 class="mb-0">RMU Youth Soccer Tounament</h4>
+        <div class="subheading mb-2">Coordinator and Volunteer</div>
+        <p>Collaborated with Robert Morris University club soccer team members to create an annual tournament for youth soccer teams. Created an environment for youth players to experience a fun and competitive environment.  </p>
+      </div>
+      <div class="flex-shrink-0"><span class="text-primary">2022 – Present</span></div>
+    </div>
+
+    <!-- Add more entries here as needed -->
+
+  </div>
+</section>
+
+                        
+
+
+
+
+            
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
