--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ s/<!DOCTYPE html>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="page-top" data-bs-spy="scroll" data-bs-target="#sideNav" data-bs-offset="0" tabindex="0">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
