--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="card-body">
             <h5 class="card-title">SQL Food Habit Analysis</h5>
             <p class="card-text">Analyzed students food habits using SQL to uncover trends. Used joins, CTEs, and subqueries to create a clean summary report.</p>
-            <p><strong>Tools:</strong> SQL, PostgreSQL, Excel</p>
+            <p><strong>Tools:</strong> SQL </p>
             <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a>
           </div>
         </div>
