--- a/index.html
+++ b/index.html
@@ -320,17 +320,17 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
     
     <div class="row">
       
-      <!-- Certification 1 -->
+      <!-- Certification 1 
       <div class="col-md-6 mb-4 text-center">
         <img src="assets/img/google-data-cert.png" alt="Google Data Analytics Certificate" class="img-fluid mb-2 rounded shadow-sm" style="max-height: 300px;">
         <h5>Google Data Analytics Certificate</h5>
-      </div>
+      </div> -->
 
-      <!-- Certification 2 -->
+      <!-- Certification 2 
       <div class="col-md-6 mb-4 text-center">
         <img src="assets/img/comptia-a-cert.png" alt="CompTIA A+ Certificate (In Progress)" class="img-fluid mb-2 rounded shadow-sm" style="max-height: 300px;">
         <h5>CompTIA A+ (In Progress)</h5>
-      </div>
+      </div> -->
 
       <!-- Add more blocks as needed -->
   <!-- Certification 2 -->
