--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p class="lead mb-5">I am currently completing my degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ray-j-thomas/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/Raymond-Thomas"><i class="fab fa-github"></i></a>
                      <!--   <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>-->
                     </div>
