--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         3027 Meadowvue Dr. · Pittsburgh, PA 15227 · (412) 860-0168 ·
                         <a href="mailto:name@email.com">rthomas2160@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am currently completing my degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
+                    <p class="lead mb-5">I have a degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ray-j-thomas/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Raymond-Thomas"><i class="fab fa-github"></i></a>
