--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div>Computer Information Systems</div>
                             <div>Completed credits equivalent to a buisness minor</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Graduate May 2025</span></div>
+<!--<div class="flex-shrink-0"><span class="text-primary">Graduate May 2025</span></div> -->
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
